# stock_data

./: .gitignore  API.md  README.md  pyproject.toml  verify_stockdata.py
docs/: MIGRATION-super-trader-rqgm.md
openspec/changes/ffd-local-daily-history/: design.md  proposal.md  tasks.md
openspec/changes/ffd-local-daily-history/specs/daily-history/: spec.md
planwithfile/data-source-audit/: 01-daily_stock_analysis.md  02-a-stock-data.md  03-verification-live.md  04-go-stock.md  05-backtest20-verdict.md  backtest20.py  verify_api.py  verify_returns.py  xval.py
planwithfile/ffd-local-daily-history/: brief.md  capability-map.md  context-plan.md  decisions.md  evidence.md  findings.md  mode.md
scripts/: validate_against_findesk.py
stockdata/: __init__.py  api.py  cache.py  cli.py  columnar.py  consensus.py  fetch_baostock.py  fetch_mootdx.py  fetch_tencent.py  mcp_handlers.py  server.py  service.py  stockdata.py  ticker.py
tests/: test_cache.py  test_cli.py  test_cli_realtime.py  test_columnar.py  test_consensus.py  test_fetch_baostock.py  test_fetch_mootdx.py  test_fetch_tencent.py  test_mcp_handlers.py  test_service.py  test_ticker.py
