[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stockdata"
version = "1.0.0"
description = "本地 A 股日线历史行情服务：drop-in 替换 ffd.findesk.cn 的 FFD MCP 数据源"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
    "mootdx>=0.10",
    "baostock>=0.8",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
dev = ["pytest>=7.0"]

[project.scripts]
stockdata = "stockdata.server:main"
stockdata-cli = "stockdata.cli:main"

[tool.setuptools.packages.find]
include = ["stockdata*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q -m 'not network'"
markers = [
    "network: 需要真实网络/数据源（默认跳过，用 -m network 单独跑）",
]
